# iris-mind_v2

./: .env.example  .gitattributes  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  iris-control-plane.toml  main.py  opencode.json  persona.toml  pyproject.toml  pyrightconfig.json  semgrep.yml
.agents/: README.md  approved-suppression-debt.toml  approved-suppression-debt.toml.snap  architecture.md  cognitive.md  rules.md  suppression-debt-remediation.md  tests.md
.agents/checklists/: ai-harness.md  architecture-review.md  completion-report.md  done.md  failure-analysis.md  pre-change.md  pre-commit.md  review.md
.agents/prompts/: ai-harness-task.md  claude-implement.md  codex-implement.md  opencode-implement.md  shared-task-template.md
.agents/rules/: ai-harness.md  anti-patterns.md  architecture.md  boundaries.md  cognitive-cycle.md  documentation-language.md  instruction-design.md  output-compression.md  runtime-boundary.md  testing.md  typing.md  verification.md
.agents/workflows/: add-feature.md  ai-harness.md  architecture.md  bugfix.md  docs-update.md  implement.md  refactor.md  review.md  test-fix.md
.codex/: config.toml
.codex/agents/: iris-code-mapper.toml  iris-refactor-scout.toml  iris-test-log-analyzer.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  epic.yml  feature.yml  feature_request.yml  implementation_task.yml  investigation.yml
.github/workflows/: ci.yml
.iris/config/: llm.example.toml  runtime.example.toml  runtime.toml.bak
.iris/control-plane/: runtime-config.schema.json
.serena/: project.yml
.zed/: settings.json  tasks.json
docs/: ai-harness.md  architecture.md  character.md  cognitive.md  external.md  identity-space-semantics.md  index.md  learning-candidate-review.md  legacy.md  mvp.md  observability.md  rules.md  runtime-api.md  shared-episodic-memory-candidates.md  tests.md  types.md
docs/adr/: 0001-ephemeral-deterministic-space.md  0002-runtime-state-persistence-policy.md  0003-identity-owned-memory.md  0004-relationship-and-affect-state.md  0005-llm-provider-runtime-policy.md  0006-proactive-scheduler-delivery-safety.md  0007-public-remote-auth-boundary.md  0007-runtime-boundary-guard.md  0008-runtime-observability-and-diagnostics.md  0009-feature-presentation-runtime-boundaries.md  0010-runtime-learning-delivery-history-boundary.md  0011-memory-vector-index-backend.md  0012-sqlite-schema-migration-backup-recovery.md  0013-local-llm-lifecycle-readiness-warmup.md  0014-local-model-call-budget-and-cascade-policy.md  0014-public-remote-auth-boundary.md  0015-local-model-call-budget-and-cascade-policy.md  0016-companion-affect-state-model.md  0016-prompt-budget-and-context-compression.md  0017-companion-affect-state-model.md  0018-appraisal-semantics-split.md  0018-local-inference-resource-scheduler.md  0019-local-inference-resource-scheduler.md  0020-diagnostic-action-isolation.md  0020-relationship-update-policy-v2.md  0021-relationship-update-policy-v2.md  0022-global-persona-system-prompt-builder.md  0022-runtime-ordering-and-conflict-policy.md  0023-transcript-management-boundary.md  README.md
docs/archive/: legacy-v0.md
examples/config/: local-ollama.toml  minimal.toml  openai.toml
iris/: __init__.py  errors.py
iris/adapters/: __init__.py
iris/cognitive/: __init__.py
iris/contracts/: __init__.py  accounts.py  actions.py  activity.py  affect.py  appraisal.py  availability.py  classification.py  companion_affect.py  conversation.py  delivery.py  delivery_transitions.py  devices.py  embeddings.py  event_reaction.py  external_refs.py  identity.py  implicit_memory_extraction.py  interaction_policy.py  learning.py  llm.py  memory.py  memory_candidates.py  memory_consolidation.py  metadata.py  model_invocation.py  model_policy.py  observations.py  ordering.py  persona.py  policy.py  presence.py  presentation.py  presentation_hints.py  proactive_talk.py  prompting.py  relationship.py  relationship_update.py  retrieval.py  review_candidates.py  (+7 more)
iris/core/: __init__.py  async_utils.py  datetime_utils.py  ids.py  metadata.py
iris/features/: __init__.py  definition.py
iris/presentation/: __init__.py  action_plan.py  event_reaction.py  ports.py  presenter.py  suite.py
iris/runtime/: __init__.py  accounts.py  app.py  cli.py  config.py  config_provider.py  conversation.py  doctor.py  doctor_filesystem.py  doctor_formatting.py  doctor_models.py  doctor_operations.py  doctor_provider.py  doctor_state.py  memory_vector_rebuilder.py  model_call_budget.py  observation_processor.py  observation_router.py  output_pipeline.py  server.py  service.py  service_contracts.py  trace_context.py
iris/safety/: __init__.py  action_gate.py  basic_output_filter.py  delivery_gate.py  output_filter.py  policy_engine.py
scripts/: __init__.py  _subprocess_runner.py  ai_context.py  ai_report.py  check_suppression_debt_changes.py  check_test_budget.py  generate_protos.py  generate_runtime_config_schema.py  test_targets.py  verify.py
tests/: __init__.py  conftest.py  test_oneturn_flow.py
tests/adapters/: __init__.py  test_account_store.py  test_app_gateway_fake_resolvers.py  test_app_gateway_ports.py  test_app_gateway_resolvers.py  test_fake_app_gateway.py  test_fake_embedding.py  test_fake_llm.py  test_fake_memory_store.py  test_generated_proto_stubs.py  test_grpc_delivery_mappers.py  test_grpc_error_mapping.py  test_grpc_ingress_errors.py  test_grpc_mapper_identity_space_semantics.py  test_grpc_mappers.py  test_identity_resolver.py  test_identity_resolver_semantics.py  test_in_memory_space_binding_store.py  test_langchain_memory_store.py  test_llm_diagnostics_contracts.py  test_llm_lifecycle.py  test_llm_observability.py  test_observation_factory.py  test_ollama_diagnostics.py  test_ollama_diagnostics_coverage.py  test_ollama_lifecycle.py  test_ollama_llm.py  test_ollama_response_mapping.py  test_openai_diagnostics.py  test_openai_llm.py  test_qdrant_vector_memory_index.py  test_rerankers.py  (+13 more)
(+765 files in other folders)
