[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-mind"
version = "0.1.0"
description = "AI companion — Cognitive Runtime Architecture v0.1 target MVP"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.0",
    "langchain>=1.3"
]

[tool.setuptools.packages.find]
include = ["iris*"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["iris", "tests"]
extend-exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I",
    "B", "UP", "RUF", "C4", "SIM", "RET", "PERF", "PIE", "FA", "ISC", "PT", "T10", "S",
]
ignore = [
    "E501",
    "B008",
    "RUF001",
    "RUF002",
    "RUF003",
    "ISC001",
    "S101",
    "S105",
    "S106",
    "S311",
    "S603",
    "S607",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]
"tests/architecture/*.py" = [
    "PERF401",
]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["iris", "tests"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
files = ["iris/core", "iris/contracts", "iris/cognitive", "iris/presentation", "iris/safety", "iris/features", "iris/adapters", "iris/runtime", "iris/errors.py"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true
enable_error_code = ["ignore-without-code", "redundant-cast", "unused-awaitable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-config --strict-markers --tb=short"
markers = [
    "unit: ユニットテスト",
    "integration: 統合テスト",
    "architecture: v0.1 architecture boundary tests",
    "target: v0.1 target architecture tests and runtime tests",
    "slow: 低速テスト",
    "anyio: anyio-based async tests",
]

[tool.coverage.run]
branch = true
source = ["iris"]
omit = [
    "tests/*",
    "iris/__init__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9",
    "pytest-asyncio",
    "pytest-cov>=7",
    "hypothesis>=6",
    "pre-commit>=4",
    "pyright>=1.1",
]
