[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris-mind"
version = "0.1.0"
description = "AI companion — Cognitive Runtime Architecture v0.1 target MVP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "openai>=2.0",
    "httpx>=0.28",
    "langchain>=1.3",
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
    "protobuf>=6.33.6",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.22.1",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["iris*"]

[tool.setuptools.package-data]
"iris.runtime.config.templates" = ["*.toml"]

[tool.ruff]
target-version = "py313"
line-length = 100
fix = false
show-fixes = true
src = ["iris", "tests", "scripts"]
extend-exclude = ["iris/generated"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ruff formatter conflicts / recommendations.
    "COM812",
    "ISC001",
    # D415: Japanese docstrings use 。 which is not recognized.
    "D415",
    # RUF002: Japanese docstrings legitimately use fullwidth chars.
    "RUF002",
    # Copyright notices are not used in this project.
    "CPY001",
]
fixable = ["ALL"]
unfixable = [
    # Debug prints must be removed deliberately, not auto-fixed into silence.
    "T201",
    "T203",
]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Pytest intentionally uses assert and public test function names.
    "S101",
    "PLR2004",
    # Test methods in classes often do not use self and omit docstrings.
    "PLR6301",
    "D102",
]
"scripts/**/*.py" = [
    # Scripts may invoke subprocesses as part of the local harness.
    "S603",
    # Scripts may insert repo root into sys.path before importing sibling modules
    # when run directly (e.g. python scripts/verify.py).
    "E402",
]
"tests/architecture/test_cognitive_runtime_anti_patterns.py" = [
    # Architecture tests are intentionally deeply nested for exhaustive checks.
    "PLR1702",
]
"tests/architecture/test_cognitive_runtime_contracts.py" = [
    # Architecture tests are intentionally deeply nested for exhaustive checks.
    "PLR1702",
]


[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true
suppress-dummy-args = false
suppress-none-returning = false

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
parametrize-names-type = "tuple"
parametrize-values-row-type = "tuple"
parametrize-values-type = "list"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["iris", "tests"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 10
max-locals = 12
max-public-methods = 12
max-returns = 4
max-statements = 40

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
files = ["iris", "tests", "scripts", "main.py"]
exclude = ["iris/generated"]
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_equality = true
strict_bytes = true
local_partial_types = true
disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
pretty = true
enable_error_code = [
    "explicit-override",
    "ignore-without-code",
    "mutable-override",
    "possibly-undefined",
    "redundant-cast",
    "redundant-expr",
    "truthy-bool",
    "truthy-iterable",
    "unused-awaitable",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "iris.generated",
    "iris.generated.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "iris.contracts",
    "iris.contracts.*",
    "iris.core",
    "iris.core.*",
    "iris.cognitive",
    "iris.cognitive.*",
    "iris.features",
    "iris.features.*",
    "iris.presentation",
    "iris.presentation.*",
    "iris.safety",
    "iris.safety.*",
    "iris.runtime",
    "iris.runtime.*",
]
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = [
    "iris.adapters",
    "iris.adapters.*",
]
# External libraries often expose incomplete typing. Keep adapter uncertainty at
# the boundary instead of forcing fake casts into internal domain code. The
# adapter scope is the only place where missing third-party imports are
# tolerated; internal iris modules stay strictly typed and must not import
# libraries with incomplete stubs.
disallow_untyped_calls = false
disallow_untyped_decorators = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tests",
    "tests.*",
    "scripts",
    "scripts.*",
]
# Tests and local harness scripts stay typed, but they should not be as strict as
# production architecture code around decorators and untyped third-party helpers.
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-config --strict-markers --tb=short"
xfail_strict = true
filterwarnings = ["error"]
markers = [
    "unit: ユニットテスト",
    "integration: 統合テスト",
    "architecture: v0.1 architecture boundary tests",
    "target: v0.1 target architecture tests and runtime tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
    "llm_live: tests requiring live LLM provider",
    "anyio: anyio-based async tests",
]

[tool.coverage.run]
source = ["iris"]
branch = true
parallel = true
omit = [
    "tests/*",
    "iris/generated/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9",
    "pytest-asyncio",
    "hypothesis>=6",
    "pre-commit>=4",
    "pyright>=1.1",
    "pytest-cov>=7",
    "mypy-protobuf>=5.1.0",
    "types-protobuf>=7.34.1.20260518",
    "types-grpcio>=1.0.0.20260518",
    "import-linter",
    "semgrep",
]
